kubernetes/k3s-01/workloads/readarr/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: readarr
  namespace: torrenting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
        access-postgres: "true"
    spec:
      containers:
        - name: readarr
          image: docker.io/linuxserver/readarr:0.4.19-nightly@sha256:4f291128d1a5538be73c2a30473d7cdd0820e223dc8b8533b0cbc5659000dcbe
          volumeMounts:
            - name: readarr
              mountPath: /config
            - name: readarr-downloads
              mountPath: /downloads
            - name: readarr-books
              mountPath: /books
      volumes:
        - name: readarr
          persistentVolumeClaim:
            claimName: readarr
        - name: readarr-downloads
          persistentVolumeClaim:
            claimName: readarr-downloads
        - name: readarr-books
          persistentVolumeClaim:
            claimName: readarr-books
