kubernetes/k3s-01/workloads/readarr/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: readarr
  namespace: torrenting
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: readarr
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      - podSelector:
          matchLabels:
            app: prowlarr
      ports:
        - protocol: TCP
          port: 8787
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: prowlarr
      ports:
        - protocol: TCP
          port: 9696
    - to:
      - podSelector:
          matchLabels:
            app: qbittorrent
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgres
          podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
